--- a/curriculo.html
+++ b/curriculo.html
@@ -9,6 +9,7 @@
         </ul>
         <h3>Cursos<h3>
         <ul>
+        <li>Curso Técnico de Desenvolvimento de sistemas(DS)</li>
         
         
     </body>
