--- a/curriculo.html
+++ b/curriculo.html
@@ -10,7 +10,8 @@
         <h3>Cursos<h3>
         <ul>
         <li>Curso Técnico de Desenvolvimento de sistemas(DS)</li>
-        
+        </ul>
+        <h2>Experiências profissionais</h2>
         
     </body>
 </html>
