--- a/curriculo.html
+++ b/curriculo.html
@@ -7,11 +7,13 @@
         <li>Escola Girassol(maternal até 5 ano)</li>
         <li>Colégio Cívico Militar Tarquínio Santos (6 ano até o 3 ano)</li>
         </ul>
-        <h3>Cursos<h3>
+        <h3>Cursos</h3>
         <ul>
         <li>Curso Técnico de Desenvolvimento de sistemas(DS)</li>
         </ul>
         <h2>Experiências profissionais</h2>
+        <h3>Modelo</h3>
+        
         
     </body>
 </html>
