--- a/curriculo.html
+++ b/curriculo.html
@@ -13,7 +13,17 @@
         </ul>
         <h2>Experiências profissionais</h2>
         <h3>Modelo</h3>
-        
+        <ul>
+        <li>Trabalhei por 7 anos</li>
+        </ul>
+        <h3>Advogada</h3>
+        <ul>
+        <li>Trabalhei por 4 anos</li>
+        </ul>
+        <h3>Empresária</h3>
+        <ul>
+        Trabalhei por 9 anos
+        </ul>
         
     </body>
 </html>
