--- a/curriculo.html
+++ b/curriculo.html
@@ -22,7 +22,7 @@
         </ul>
         <h3>Empresária</h3>
         <ul>
-        Trabalhei por 9 anos
+        <li>Trabalhei por 9 anos</li>
         </ul>
         
     </body>
