--- a/curriculo.html
+++ b/curriculo.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <title>Currículo</title>
+    </head>
     <body>
         <h1>Ane Beatriz</h1>
         <h2>Educação</h2>
@@ -24,5 +27,9 @@
         <ul>
         <li>Trabalhei por 9 anos</li>
         </ul>
-    </body>
+        <a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwiV8uzx6r6EAxWyQUgAHRoOAQsYABAAGgJjZQ&ase=2&gclid=EAIaIQobChMIlfLs8eq-hAMVskFIAB0aDgELEAAYAiAAEgJsg_D_BwE&ohost=www.google.com&cid=CAASJeRon_uggrn-XEo16aUxkReAkomqS2pkHauSvRlxIdK9J81pKdE&sig=AOD64_1UlaE0kQE3MSOFrarGsAjiweFO8A&q&nis=4&adurl&ved=2ahUKEwje9-bx6r6EAxX-rJUCHaOiDd8Q0Qx6BAgFEAE" target="blank_">Faculdade de TI</a>
+        <br>
+
+       <img src="foto/imagem.jpg"title="tarquinio">
+        
 </html>
